# TechReviewAmicon

./: .clang-format  .gitignore  CMakeLists.txt  Client.c  JournalUtility.c  Readme.md  Server.c  Utils.h  build_and_run.sh  run_client.sh  run_journal.sh  run_server.sh
client/: CMakeLists.txt  boot_client.c  client.c  client.h  client_worker.c  client_worker.h  config.h
cmake/: Testing.cmake
network/: CMakeLists.txt  message.c  message.h  message_queue.c  message_queue.h  net_connection.c  net_connection.h  socket_udp.c  socket_udp.h
server/: CMakeLists.txt  config.h  cpu_usage.c  journal.c  journal.h  journal_transfer.c  journal_transfer.h  journal_utility.c  logger.c  process_cpu_usage.c  process_cpu_usage.h  server.c  server_worker.c  server_worker.h  shared_memory.c  shared_memory.h
test/: CMakeLists.txt
test/client/: CMakeLists.txt  test_client.c
test/network/: CMakeLists.txt  test_message.c  test_message_queue.c  test_net_connection.c  test_socket_udp.c
test/server/: CMakeLists.txt  test_journal.c  test_journal_transfer.c  test_process_cpu_usage.c  test_server_worker.c
utility/: CMakeLists.txt  safe_process.c  safe_process.h  utility.h
